syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.asliutkarsh.grpc.stream.proto.translation";
option java_outer_classname = "RealTimeTranslationProto";

package translation;

service RealTimeTranslationService {
  rpc Translate(stream TranslationRequest) returns (stream TranslationResponse);
}

message TranslationRequest {
  string user_id = 1;
  string source_lang = 2;
  string target_lang = 3;
  string text = 4;
}

message TranslationResponse {
  string translated_text = 1;
  string target_lang = 2;
  int64 timestamp = 3;
}
